# college-prediction

./: README.md  pyproject.toml
app/: create_models.py  main.py
data/: admission_data.csv
models/: college_model.pkl
templates/: index.html
